Working on adding themes

--- a/Mobile Computing Project App/Mobile Computing Project App/MedicalEvent.storyboard
+++ b/Mobile Computing Project App/Mobile Computing Project App/MedicalEvent.storyboard
@@ -470,11 +470,13 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Hg-wK-tO3">
-                                <rect key="frame" x="94" y="564" width="188" height="51"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Hg-wK-tO3" customClass="CircularButton" customModule="Mobile_Computing_Project_App" customModuleProvider="target">
+                                <rect key="frame" x="173" y="564" width="30" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <state key="normal" title="Add Attribute"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="+"/>
                                 <connections>
                                     <segue destination="KAM-D3-BIU" kind="show" id="p2r-SI-eiK"/>
                                 </connections>
