--- a/Mobile Computing Project App/Mobile Computing Project App/MedicalEvent.storyboard
+++ b/Mobile Computing Project App/Mobile Computing Project App/MedicalEvent.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4op-ct-kJn" id="NwW-em-49l">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZt-Vh-pPs">
@@ -71,14 +71,11 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cOL-RP-a4L" id="q7v-z6-yYC">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="C4D-65-cxb">
-                                            <rect key="frame" x="127" y="-2.5" width="240" height="74.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="74" id="yxr-Fb-49b"/>
-                                            </constraints>
+                                            <rect key="frame" x="61" y="-3" width="306" height="75"/>
                                             <date key="date" timeIntervalSinceReferenceDate="514163164.013004">
                                                 <!--2017-04-17 23:06:04 +0000-->
                                             </date>
@@ -86,11 +83,10 @@
                                                 <action selector="sendDateNotification:" destination="cOL-RP-a4L" eventType="valueChanged" id="bS2-Bf-A7U"/>
                                             </connections>
                                         </datePicker>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date &amp; Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePQ-gv-y7e">
-                                            <rect key="frame" x="8" y="-2.5" width="111" height="74.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date &amp; Time" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePQ-gv-y7e">
+                                            <rect key="frame" x="8" y="-3" width="45" height="75"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="74" id="RZ2-m3-zv0"/>
-                                                <constraint firstAttribute="width" constant="111" id="b3P-DZ-fqJ"/>
+                                                <constraint firstAttribute="width" constant="45" id="VsA-Jg-KN8"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                             <nil key="textColor"/>
@@ -98,11 +94,13 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="C4D-65-cxb" firstAttribute="leading" secondItem="ePQ-gv-y7e" secondAttribute="trailing" constant="8" id="KkV-SN-Q7K"/>
-                                        <constraint firstItem="C4D-65-cxb" firstAttribute="centerY" secondItem="q7v-z6-yYC" secondAttribute="centerY" id="Lqp-pc-aHc"/>
-                                        <constraint firstAttribute="trailing" secondItem="C4D-65-cxb" secondAttribute="trailing" constant="8" id="PWg-Ia-YLP"/>
-                                        <constraint firstItem="ePQ-gv-y7e" firstAttribute="leading" secondItem="q7v-z6-yYC" secondAttribute="leading" constant="8" id="TH2-ei-lrC"/>
-                                        <constraint firstItem="ePQ-gv-y7e" firstAttribute="centerY" secondItem="q7v-z6-yYC" secondAttribute="centerY" id="cwF-dT-LG7"/>
+                                        <constraint firstItem="ePQ-gv-y7e" firstAttribute="top" secondItem="q7v-z6-yYC" secondAttribute="topMargin" constant="-11" id="BW0-qu-8z0"/>
+                                        <constraint firstItem="ePQ-gv-y7e" firstAttribute="bottom" secondItem="C4D-65-cxb" secondAttribute="bottom" id="UYL-Y2-ECy"/>
+                                        <constraint firstItem="ePQ-gv-y7e" firstAttribute="top" secondItem="C4D-65-cxb" secondAttribute="top" id="caa-7q-Sx6"/>
+                                        <constraint firstItem="C4D-65-cxb" firstAttribute="trailing" secondItem="q7v-z6-yYC" secondAttribute="trailingMargin" id="d9t-B6-ofM"/>
+                                        <constraint firstItem="ePQ-gv-y7e" firstAttribute="leading" secondItem="q7v-z6-yYC" secondAttribute="leadingMargin" id="e4r-2K-jJc"/>
+                                        <constraint firstItem="ePQ-gv-y7e" firstAttribute="centerY" secondItem="q7v-z6-yYC" secondAttribute="centerY" id="s7j-mq-7ME"/>
+                                        <constraint firstItem="C4D-65-cxb" firstAttribute="leading" secondItem="ePQ-gv-y7e" secondAttribute="trailing" constant="8" symbolic="YES" id="zW0-gh-000"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -115,7 +113,7 @@
                                 <rect key="frame" x="0.0" y="98" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rWb-jD-inb" id="vFR-6g-Fim">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="exo-YP-U21">
@@ -159,7 +157,7 @@
                                 <rect key="frame" x="0.0" y="168" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Y1O-U2-5As" id="YVk-V5-JPy">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQ2-yz-PaH">
@@ -198,7 +196,7 @@
                                 <rect key="frame" x="0.0" y="238" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vwg-aB-pmU" id="G6n-KU-l6D">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pain Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OfM-Mc-36y">
@@ -223,7 +221,7 @@
                                                 <action selector="sendUnitNotification:" destination="vwg-aB-pmU" eventType="valueChanged" id="ahb-qb-DqI"/>
                                             </connections>
                                         </segmentedControl>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zds-Ie-EvD">
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zds-Ie-EvD">
                                             <rect key="frame" x="141" y="20" width="75" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="75" id="dsr-Gv-BGp"/>
@@ -260,7 +258,7 @@
                                 <rect key="frame" x="0.0" y="308" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sD2-Wt-1rq" id="JFN-Cv-44S">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="PPT-eX-tTU">
@@ -302,7 +300,7 @@
                                 <rect key="frame" x="0.0" y="378" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="blC-yK-tbF" id="Oey-l3-B6k">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pain Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HnM-lH-ue0">
@@ -343,7 +341,7 @@
                                 <rect key="frame" x="0.0" y="448" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NZN-VS-8iF" id="YKf-Nc-p3H">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pain Type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RxL-bv-PtQ">
@@ -448,11 +446,11 @@
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="V0D-gT-iLe" id="62h-Md-kS3">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZEq-lh-bk3">
-                                                    <rect key="frame" x="15" y="0.0" width="313" height="43"/>
+                                                    <rect key="frame" x="15" y="0.0" width="313" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -508,7 +506,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ARK-1Y-vIw" id="JFV-7T-jd1">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This text will be a brief explanation of this attribute" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cal-0y-lOE">
