--- a/Mobile Computing Project App/Mobile Computing Project App/Medicine.storyboard
+++ b/Mobile Computing Project App/Mobile Computing Project App/Medicine.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AYc-P9-WEs">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AYc-P9-WEs">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,7 +18,7 @@
                         <viewControllerLayoutGuide type="top" id="rE2-np-3aQ"/>
                         <viewControllerLayoutGuide type="bottom" id="jlG-Hi-xBH"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="yaN-3H-3WF">
+                    <view key="view" contentMode="scaleToFill" id="yaN-3H-3WF" customClass="LSView" customModule="Mobile_Computing_Project_App" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -73,7 +73,7 @@
                         <viewControllerLayoutGuide type="top" id="FLR-7Q-fde"/>
                         <viewControllerLayoutGuide type="bottom" id="osi-fW-4ZP"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ljL-BU-igP">
+                    <view key="view" contentMode="scaleToFill" id="ljL-BU-igP" customClass="LSView" customModule="Mobile_Computing_Project_App" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -356,7 +356,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="157"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mq2-Hy-I3u" id="wwf-Nf-vpm">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="156.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="156"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daily" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="blM-dx-qDO">
@@ -422,7 +422,7 @@
                         <viewControllerLayoutGuide type="top" id="9Ef-ZY-b4d"/>
                         <viewControllerLayoutGuide type="bottom" id="d3d-hg-ZxT"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="rx3-WG-wzb">
+                    <view key="view" contentMode="scaleToFill" id="rx3-WG-wzb" customClass="LSView" customModule="Mobile_Computing_Project_App" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -506,7 +506,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8PW-YW-x3h" id="7Gk-1V-pGo">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Advil (500 mg)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PFb-8k-1T3">
