--- a/Mobile Computing Project App/Mobile Computing Project App/Base.lproj/Main.storyboard
+++ b/Mobile Computing Project App/Mobile Computing Project App/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="weK-6y-rak">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="weK-6y-rak">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -96,19 +96,7 @@
                     <view key="view" contentMode="scaleToFill" id="TYi-Ni-gsW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data Plotting" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQN-I5-p29">
-                                <rect key="frame" x="96" y="314" width="183" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="qQN-I5-p29" firstAttribute="centerX" secondItem="TYi-Ni-gsW" secondAttribute="centerX" id="Ckf-2S-MbO"/>
-                            <constraint firstItem="qQN-I5-p29" firstAttribute="centerY" secondItem="TYi-Ni-gsW" secondAttribute="centerY" id="J8w-eJ-Cnr"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Data" id="zTx-vm-cIh"/>
                 </viewController>
@@ -145,7 +133,7 @@
                         <viewControllerLayoutGuide type="top" id="vgJ-Qp-T8e"/>
                         <viewControllerLayoutGuide type="bottom" id="81q-6l-vRU"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="52e-qr-Of5">
+                    <view key="view" contentMode="scaleToFill" id="52e-qr-Of5" customClass="LSView" customModule="Mobile_Computing_Project_App" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -233,7 +221,7 @@
                         <viewControllerLayoutGuide type="top" id="fdc-Ri-Xf7"/>
                         <viewControllerLayoutGuide type="bottom" id="u60-Q1-w0o"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="hbc-yV-d6F">
+                    <view key="view" contentMode="scaleToFill" id="hbc-yV-d6F" customClass="LSView" customModule="Mobile_Computing_Project_App" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
